2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Make download commands declarative
        https://bugs.webkit.org/show_bug.cgi?id=32469

        This patch "properly" factors most of the download commands.  These
        commands are now largely declarative, which is the final step of this
        grand refactoring.

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:

2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Add AbstractPatchSequencingCommand to remove redundant code
        https://bugs.webkit.org/show_bug.cgi?id=32468

        Redundant code is bad.  This patch moves us towards more declarative
        commands.

        * Scripts/modules/commands/download.py:

2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Kill WebKitApplyingScripts
        https://bugs.webkit.org/show_bug.cgi?id=32467

        Ah!  I've been wanting to do this for a long time.  This patch brings
        the applying commands into the patch processing fold.

        * Scripts/bugzilla-tool:
        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/download_unittest.py:
        * Scripts/modules/mock_bugzillatool.py:

2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Convert rollout to StepSequence
        https://bugs.webkit.org/show_bug.cgi?id=32406

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/download_unittest.py:
        * Scripts/modules/mock_bugzillatool.py:

2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Kill LandingSequence
        https://bugs.webkit.org/show_bug.cgi?id=32464

        Removes LandingSequence in favor of StepSequence.  This required